make my profile prettier

--- a/style.css
+++ b/style.css
@@ -95,6 +95,8 @@ a {
   display: inline-block;
   font-size: 20px;
   padding: 0px 20px;
+  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .list-inline {
