make my profile prettier

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h3 {
 }
 
 .btn-red {
-    background-color: #8A2C2F;
+    background-color: #A1282E;
     color: white;
     font-weight: 500;
     padding: 10px;
