--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 500;
   display: block;
-  color: #282C34
+  color: #282C34;
 }
 
 h2 {
@@ -98,12 +98,17 @@ a {
   text-align: center;
 }
 
+#name-margin {
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
 .list-inline > li {
   display: inline-block;
   font-size: 20px;
   padding: 0px 20px;
-  margin-bottom: 30px;
-  margin-bottom: 10px;
+  /* margin-bottom: 30px;
+  margin-bottom: 10px; */
 }
 
 .list-inline {
