make my profile prettier

--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ h3 {
     margin: 10px;
 }
 
+.btn-black {
+    background-color: #282C34;
+    color: white;
+    font-weight: 500;
+    padding: 10px;
+    border-radius: 4px;
+    margin: 10px;
+}
+
 a:hover {
   text-decoration: underline;
 }
