--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h3 {
     font-weight: 500;
     padding: 10px;
     border-radius: 4px;
+    font-style: normal;
     margin: 10px;
 }
 
@@ -58,7 +59,9 @@ h3 {
     color: white;
     font-weight: 500;
     padding: 10px;
+    /* text-decoration: none; */
     border-radius: 4px;
+    font-style: normal;
     margin: 10px;
 }
 
@@ -67,7 +70,9 @@ h3 {
     color: white;
     font-weight: 500;
     padding: 10px;
+    /* font-family: 'Open Sans', sans-serif; */
     border-radius: 4px;
+    font-style: normal;
     margin: 10px;
 }
 
