--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  background: #EBEBEB;
+  /* background: #EBEBEB; */
+  background-image: url(https://picsum.photos/g/2000/3000);
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   color: #7d7d7d;
@@ -143,7 +144,7 @@ a {
 }
 
 .card {
-    background: white;
+    background: rgba(255, 255, 255, .8);
     padding: 50px;
     margin-bottom: 20px;
     border-radius: 4px;
