--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   /* background: #EBEBEB; */
-  background-image: url(https://picsum.photos/g/2000/3000);
+  background-image: url(https://picsum.photos/g/2000/3000?random?);
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   color: #7d7d7d;
