--- a/style.css
+++ b/style.css
@@ -131,6 +131,18 @@ a {
   margin-top: 30px;
 }
 
+#movie-descirption {
+  /* margin-top: 30px; */
+  text-align: center;
+}
+
+#movie-title {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  color: #292C34;
+  font-weight: 400;
+}
+
 .list-inline > li {
   display: inline-block;
   font-size: 20px;
@@ -141,6 +153,11 @@ a {
 
 .list-inline {
     padding-left: 0;
+}
+
+#photography-block {
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .card {
