--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
+@import url("components/tabs.css");
+@import url("components/profile_header.css");
+@import url("components/list.css");
+
 body {
   /* background: #EBEBEB; */
-  background-image: url(https://picsum.photos/g/2000/3000?random);
+  /* background-image: url(https://picsum.photos/g/2000/3000?random);
+  background-repeat: no-repeat; */
+  /* background-position: fixed; */
+  /* position: sticky;
+  background-size: cover; */
+
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   color: #7d7d7d;
   font-size: 15px;
   line-height: 1.6em;
+  /* background-color: white; */
 }
 
 body {
   display: block;
-  margin: 8px;
+  margin: 0px;
 }
 
 p {
@@ -43,6 +53,7 @@ h3 {
 .container {
   width: 700px;
   margin: 0 auto;
+  margin-top: 50px;
 }
 
 .btn-red {
@@ -78,7 +89,7 @@ h3 {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a {
@@ -129,6 +140,7 @@ a {
 
 #company-heading {
   margin-top: 30px;
+  /* text-align: left */
 }
 
 #movie-descirption {
@@ -155,15 +167,53 @@ a {
     padding-left: 0;
 }
 
+.bg-image {
+  background-image: url(https://picsum.photos/g/700/800?random);
+  background-repeat: no-repeat;
+  /* background-position: fixed; */
+  background-attachment: fixed;
+  background-size: cover;
+  /* margin-top: -50px; */
+  /* height: 100vh; */
+  /* width: 100vw; */
+}
+
 #photography-block {
   text-align: center;
   margin-bottom: 40px;
 }
 
+.first-card-top-margin {
+  margin-top: 40px;
+}
+
 .card {
-    background: rgba(255, 255, 255, .9);
+    background: rgba(255, 255, 255, .8);
     padding: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     border-radius: 4px;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
+}
+
+ /* .background-image {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(https://picsum.photos/g/2000/3000?random);
+  background-repeat: no-repeat;
+  background: fixed;
+  background-size: cover; */
+/* } */
+
+/* .banner {
+  background-image: url('background.jpg')
+} */
+
+
+.link-animation {
+    padding-right: 20px;
+    text-align: center;
+    transition: all 0.15s ease;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 20px;
 }
